--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -28,9 +28,11 @@
 		max-width: 478px
 		width: 100%
 		transform: translate(-50%, 50%)
-		overflow-y: scroll
+		// overflow-y: scroll
 		@media screen and ( max-height: 490px)
 			padding: 14px 88px
+			max-height: 80%
+			overflow-y: auto
 		@media screen and ( max-width: 576px)
 			padding: 33px 5vw
 	&__close
@@ -50,7 +52,7 @@
 		width: 100%
 		border-radius: 4px
 		@media screen and ( max-height: 490px)
-			min-height: 30px	
+			min-height: 40px	
 		&-group
 			flex-basis: 100%
 			margin: 0 0 15px 0
@@ -58,7 +60,7 @@
 			min-height: 50px
 			color: $text-color
 			@media screen and ( max-height: 490px)
-					margin: 0
+				margin: 0
 	&__message
 		margin: 0 0 15px 0
 		@media screen and ( max-height: 490px)
